# music_player

./: .env  .gitignore  CLAUDE.md  README.md  SKILL.md  main.py  music_player.spec  pyproject.toml  ruff.toml  start.ps1
.claude/: settings.local.json
.github/agents/: music-player-builder.agent.md  music-player.agent.md
scripts/: build.bat  download_projectm.py
src/music_player/: _paths.py  dns_cache.py  image_cache.py  image_store.py  logging.py  queue.py  services.py
src/music_player/controller/: playback_controller.py
src/music_player/domain/: audio_player.py  ports.py  track.py
src/music_player/repository/: _http.py  artist_repository.py  music_repository.py  play_history_db.py  playlist_db.py  subsonic_client.py  track_cache_db.py
src/music_player/ui/: app.py  app_settings.py  glyphs.py  last_playlist.py  loading_screen.py  navigation.py  pins.py  sidebar_widget.py
src/music_player/ui/components/: artist_card.py  artist_detail_page.py  artists_page.py  flow_grid.py  library_page.py  milkdrop_widget.py  musicbrainz_image.py  playback_bridge.py  player_bar.py  playlist_page.py  queue_panel.py  search_dialog.py  settings_dialog.py  track_table.py  visualizer_panel.py
src/music_player/ui/workers/: album_tracks.py  artist_detail.py  artist_worker.py  download_worker.py  image_loader.py  lyrics.py  playlist_import.py  playlists.py  search.py  shuffle.py  starred.py  startup_cache.py
