[project]
name = "music-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"PyQt6>=6.6.0",
	"ruff>=0.4.0",
	"httpx>=0.27.0",
	"python-mpv>=1.0.5",
	"requests>=2.33.1",
	"numpy>=1.26.0",
	"sounddevice>=0.4.7",
	"soundcard>=0.4.0",
	"python-dotenv>=1.2.2",
]
[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
